src/App.css
.App {
  text-align: center;
  display: flex;
  background-color: #282c34;
  color: white;
  position: absolute;
  top:0;bottom:0;left:0;right:0;
}

.sidemenu {
  width: 260px;
  padding:10px;
  border: 1px solid white;
  background-color: #202123;
}

@media (max-width: 768px) {
  .sidemenu {
    display: none;
  }
}

.sidemenu-btn {
  cursor: pointer;
  padding:12px;
  border:1px solid white;
  border-radius:5px;
  text-align: left;
  font:12px;
  transition:ease 0.25s all;
}
.sidemenu-btn:hover {
  background-color: rgba(255,255,255,0.1);
}

.chatbox {
  flex: 1;
  border: 1px solid white;
  position:relative;
}

.chat-log {
  padding:24px;
  text-align:left;
}
.chat-message.chatgpt {
  background-color: #444654;
}
.chat-message-center.user {
  flex-direction: row-reverse;
}
.chat-message-center {
  display:flex;
  align-items: center;
  border-radius: 5px;
  padding:12px;
  max-width: 640px;
  margin-left: auto;
  margin-right: auto;
}
.avatar {
  background-color: white;
  border-radius: 50%;
  width: 40px;
  height: 40px;
}
.avatar.chatgpt {
  background-color: #0da37f;
  border-radius: 50%;
  width: 40px;
  height: 40px;
}
.message {

  padding-left: 40px;
  padding-right:40px;
}

.chat-input-container {
  padding:12px;
  position:absolute;
  bottom:0; left:0 ; right:0;
}
.chat-input-textarea {
  background-color: #40414f;
  width:100%;
  border-radius:5px;
  border:none;
  outline:none;
  max-width: 640px;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.5);
  padding:1%;
  color:white;
  font-size: 1.25em;
}
.chat-input-textarea:disabled {
  background-color: #40414f;
  color: #a0a0a0;
  cursor: none;
}

